[package]
name = "soda"
version = "0.1.0"
authors = ["Michael Snoyman <michael@snoyman.com>"]
edition = "2018"
description = "Simple command line encryption"
readme = "README.md"
homepage = "https://github.com/snoyberg/soda"
repository = "https://github.com/snoyberg/soda"
license = "MIT"
keywords = ["secrets", "encryption"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1"
clap = "~3.0.0-beta.5"
once_cell = "1.8"
sodiumoxide = "0.2.7"
base64 = "0.13"

[build-dependencies]
anyhow = "1"
vergen = { version = "5.1.1", default-features = false, features = ["git"] }

[profile.release]
panic = "abort"
opt-level = "z"
lto = true
